# Bills

./: .gitignore  Bills.cabal  Db.hs  DbHelpers.hs  Json.hs  Main.hs  ReqResp.hs  Test.hs  Types.hs  Util.hs  addbill.py  dobuild.sh  mkdb.sh  process_bill.py
static/: add_bill.js  attach_file.html  balances.js  display_statement.html  index.html  login.html  old_bills.js  statements.html  user_admin.js  util.js
